create complete slider with js

--- a/SliderPage/index.html
+++ b/SliderPage/index.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
-<html lang="pl-PL">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slider</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,600&display=swap" rel="stylesheet">
-</head>
-<body>
-    <h1>The best Air Jordan Model in our world</h1>
-    <ul class="gallery">
-        <li class="thumbnail"><img src="./img/1.jpg" alt=""></li>
-        <li class="thumbnail"><img src="./img/2.jpg" alt=""></li>
-        <li class="thumbnail"><img src="./img/3.jpg" alt=""></li>
-        <li class="thumbnail"><img src="./img/4.jpg" alt=""></li>
-        <li class="thumbnail"><img src="./img/5.jpg" alt=""></li>
-        <li class="thumbnail"><img src="./img/6.png" alt=""></li>
-        <li class="thumbnail"><img src="./img/7.jpg" alt=""></li>
-        <li class="thumbnail"><img src="./img/8.jpg" alt=""></li>
-        <li class="thumbnail"><img src="./img/9.jpg" alt=""></li>
-        <li class="thumbnail"><img src="./img/10.jpg" alt=""></li>
-    </ul>
-</body>
+<html lang="pl">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Slider</title>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,600&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <h1>The best Air Jordan Model in our world</h1>
+        <ul class="gallery">
+
+            <li class="thumbnail"><img src="./img/1.jpg" alt=""></li>
+            <li class="thumbnail"><img src="./img/2.jpg" alt=""></li>
+            <li class="thumbnail"><img src="./img/3.jpg" alt=""></li>
+            <li class="thumbnail"><img src="./img/4.jpg" alt=""></li>
+            <li class="thumbnail"><img src="./img/5.jpg" alt=""></li>
+            <li class="thumbnail"><img src="./img/6.png" alt=""></li>
+            <li class="thumbnail"><img src="./img/7.jpg" alt=""></li>
+            <li class="thumbnail"><img src="./img/8.jpg" alt=""></li>
+            <li class="thumbnail"><img src="./img/9.jpg" alt=""></li>
+            <li class="thumbnail"><img src="./img/10.jpg" alt=""></li>
+
+        </ul>
+        <div class="popup hidden">
+            <button aria-label="Zamknij popup" class="popup__close">X</button>
+            <img src="" alt="" class="popup__img" />
+            <button
+                aria-label="Poprzednie zdjęcie"
+                class="popup__arrow popup__arrow--left">
+            </button>
+            <button
+                aria-label="Następne zdjęcie"
+                class="popup__arrow popup__arrow--right">
+            </button>
+        </div>
+        <script src="app.js"></script>
+    </body>
 </html>
